@@ -1,3 +1,9 @@
+globus-gridftp-server (12.8-1+gt6.@distro@) @distro@; urgency=low
+
+  * fix daemon config parsing not catching env vars
+
+ -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2018 16:22:05 -0500
+
 globus-gridftp-server (12.7-1+gt6.@distro@) @distro@; urgency=low
 
   * force ipc encryption if server configuration requires
